[project]
name = "sbf-causal-discovery"
version = "0.1.0"
description = ""
authors = [
    {name = "Asger Morville", email = "asgermorville@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=1.24,<2.3)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "cdt (>=0.6.0,<0.7.0)",
    "rpy2 (>=3.6.1,<4.0.0)",
    "torch (>=2.7.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "graph_search", from = "src"},{include = "sbf_core", from = "src"}, {include = "simulation_utils", from = "src"} ]


[tool.poetry.group.dev.dependencies]
setuptools = "^80.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
